# PFTrack

./: LICENSE  README.md
experiments/: VTMOT_fusion_mid.sh  VTMOT_test.sh  VTMOT_trans_early_fusion_test.sh  VTMOT_transformer_early_fusion.sh
readme/: INSTALL.md
src/: main.py  test_rgbt.py
src/lib/: detector.py  detector_rgbt.py  opts.py  trainer.py
src/lib/dataset/: dataset_factory.py  generic_dataset.py  generic_dataset_rgbt.py
src/lib/dataset/datasets/: mot_rgbt.py
src/lib/model/: model.py
src/lib/model/networks/: base_model.py  dla.py  dla_M_cat.py  dla_V3_M.py  dla_fusion_mid.py  position_encoding.py  transformer_fusion.py  transformer_fusion_m.py  transformer_fusion_v1_refine.py  transformer_fusion_v3.py  transformer_fusion_v3_all.py  transformer_fusion_v3_f.py  transformer_fusion_v3_vt.py
src/lib/model/networks/DCNv2/: .flake8  .gitlab-ci.yml  README.md  onnx_graphsurgeon-0.2.3-py2.py3-none-any.whl
src/lib/model/networks/DCNv2/dev/: linter.sh
src/lib/model/networks/DCNv2/src/cpu/: dcn_v2_cpu.cpp  dcn_v2_im2col_cpu.cpp  dcn_v2_psroi_pooling_cpu.cpp
src/lib/model/networks/DCNv2/tests/: testplugin.py
src/lib/model/networks/DCNv2/trt_plugin/: .clang-format  CMakeLists.txt  DeformConv.cpp  DeformConv.cu  DeformConv.hpp  serialize.hpp
src/lib/model/networks/backbones/: mobilenet.py
src/tools/: convert_mot_rgbt_to_coco.py  vis_tracking_mot.py
trackeval/: Readme.md  eval.py  plotting.py  run_mot_challenge.py
trackeval/datasets/: __init__.py  _base_dataset.py  mot_challenge_2d_box.py
trackeval/tools/: mot_vision.py  utils.py
(+3 files in other folders)
